- Unified the function names of the core classes that set and return the
  workgroup name, host name, and share name.
- Made the core container classes use QUrls internally where appropriate.
- Revised Smb4KSettings class:
  + Removed the program entries from this class. Each core class that needs
    an external program searches for itself.
- Revised Smb4KAuthInfo class:
  + Removed old constructor.
  + Added two new constructors.
  + Added type enumeration and function.
  + Added setUNC() and unc() functions.
  + Added setHomesUsers() and homesUsers() functions so that homes user
    entries can be handled.
  + Renamed user() and setUser() functions login() and setLogin().
  + Removed the setHomesUser() function. Use setLogin() instead.
  + setShare() now automatically uses Smb4KShare::homeUNC() to set the UNC,
    if you pass a homes share.
  + Added equals() function.
  + Added "==" operator.
- Replaced the Smb4KPasswordHandler class with the new Smb4KWalletManager
  class. It offers a much cleaner implementation.
- Revised Smb4KWorkgroup class:
  + Added equals() function.
  + Added hasMasterBrowserIP() function.
  + Added "==" operator.
- Revised Smb4KHost class:
  + Added setAuthInfo() function. You can set the user info of the UNC/URL with
    it.
  + Added setUNC() and unc() functions.
  + Added setLogin() and login() function. They store the login that was used
    to authenticate to a host.
  + Added setPort() and port() function.
  + Added equals() function.
  + Added hasIP() function.
  + Removed the protocol functions.
  + Added "==" operator.
- Revised Smb4KShare class:
  + Replaced setCIFSLogin(), cifsLogin(), and cifsLoginIsSet() with setLogin()
    login(), and loginIsSet().
  + The equals() function now takes a pointer instead of a reference.
  + Rewrote UNC functions.
  + The setMountData() function does not set and the resetMountData() function
    does not reset the login anymore.
  + The login is now empty by default.